third_party/WebKit/Source/WTF/wtf/HashCountedSet.h
@@ -40,6 +40,8 @@ namespace WTF {
         typedef typename ImplType::AddResult AddResult;
         
         HashCountedSet() {}
+
+        void swap(HashCountedSet&);
         
         int size() const;
         int capacity() const;
@@ -76,6 +78,12 @@ namespace WTF {
     private:
         ImplType m_impl;
     };
+
+    template<typename Value, typename HashFunctions, typename Traits>
+    inline void HashCountedSet<Value, HashFunctions, Traits>::swap(HashCountedSet& other)
+    {
+        m_impl.swap(other.m_impl);
+    }
     
     template<typename Value, typename HashFunctions, typename Traits>
     inline int HashCountedSet<Value, HashFunctions, Traits>::size() const
